Added some stuff, removed Rachelle
- Removed Rachelle's stuff
- Added Week C for Juliet
- Added Week B for Dewald
- added Week D for Jarrod

--- a/Jarrod.html
+++ b/Jarrod.html
@@ -26,7 +26,7 @@
                     <li><a href="Juliet.html">JULIET</a></li>
                     <li><a href="Jarrod.html">JARROD</a></li>
                     <li><a href="Sean.html">SEAN</a></li>
-                    <li><a href="Rachelle.html">RACHELLE</a></li>
+                    <!--<li><a href="Rachelle.html">RACHELLE</a></li>-->
                     <li><a href="Dewald.html">DEWALD</a></li>
 
                 </ul>
@@ -90,21 +90,22 @@
     <section class="artwork_digital_art">        
         <div class="row">
             <div class="photos-col">
-                <img src="art_jarrod/Secrets Inbound.png">
-                <h2>Title: A...</h2>
-                <h2>Date: 4 September 2023</h2>
+                <img src="art_jarrod/Drowned Dove.png">
+                <h2>Title: Drowned Dove</h2>
+                <h2>Date: 25 September 2023</h2>
+                <p>A dove, laying face up, towards the sky, in release. She has drowned. A sheer fabric swaddles her body, her last sense of comfort. Her hair surrounds her, but trails showing the flow of the water she lays in. Her eyes are dead white, her lips the same colour. A wing is seen attached to the side of her head. She is the dove, and she has been drowned.</p>
             </div>
 
             <div class="photos-col">
                 <img src="art_jarrod/Work in Progress.png">
-                <h2>Title: B...</h2>
-                <h2>Date: 11 September 2023</h2>
+                <h2>Title: E...</h2>
+                <h2>Date: 2023</h2>
             </div>
 
             <div class="photos-col">
                 <img src="art_jarrod/Be Patient.png">
-                <h2>Title: C...</h2>
-                <h2>Date: 18 September 2023</h2>
+                <h2>Title: F...</h2>
+                <h2>Date: 2023</h2>
             </div>
 
 
