--- a/Juliet.html
+++ b/Juliet.html
@@ -26,7 +26,7 @@
                     <li><a href="Juliet.html">JULIET</a></li>
                     <li><a href="Jarrod.html">JARROD</a></li>
                     <li><a href="Sean.html">SEAN</a></li>
-                    <li><a href="Rachelle.html">RACHELLE</a></li>
+                    <!--<li><a href="Rachelle.html">RACHELLE</a></li>-->
                     <li><a href="Dewald.html">DEWALD</a></li>
 
                 </ul>
@@ -53,9 +53,9 @@
                 <a href="art_juliet/brawl.html" target="_blank" class="hero-btn">Read</a>
             </div>
             <div class="word_btn_rep-col">
-                <h1>C...</h1>
-                <p>Coming in the week of 18 September 2023!</p>
-                <!--<a href="" target="_blank" class="hero-btn">Read</a>-->
+                <h1>Crib</h1>
+                <p>27 September 2023</p>
+                <a href="art_juliet/crib.html" target="_blank" class="hero-btn">Read</a>
             </div>
 
         </div>
