--- a/Rachelle.html
+++ b/Rachelle.html
@@ -47,14 +47,14 @@
                 <p>"Never has there been a lesser desire to roam"
                     <br>
                     6 September 2023</p>
-                <audio src="art_rachelle/Anchor.mp3" controls></audio>
+                <audio src="" controls></audio>
             </div>
             <div class="word_btn_rep-col">
                 <h1>Bermuda</h1>
                 <p>"I remember what my mama said..."
                     <br>
                     13 September 2023</p>
-                <audio src="art_rachelle/Bermuda.mp3" controls></audio>
+                <audio src="" controls></audio>
             </div>
             <div class="word_btn_rep-col">
                 <h1>C...</h1>
