--- a/Sean.html
+++ b/Sean.html
@@ -26,7 +26,7 @@
                     <li><a href="Juliet.html">JULIET</a></li>
                     <li><a href="Jarrod.html">JARROD</a></li>
                     <li><a href="Sean.html">SEAN</a></li>
-                    <li><a href="Rachelle.html">RACHELLE</a></li>
+                    <!--<li><a href="Rachelle.html">RACHELLE</a></li>-->
                     <li><a href="Dewald.html">DEWALD</a></li>
 
                 </ul>
