--- a/art_juliet/alabaster.html
+++ b/art_juliet/alabaster.html
@@ -25,10 +25,10 @@
 The silence pierced her ears like a pin, slowly making its way through her body. It happened slowly, the creep of the silence. Every songbird migrated and each waterdrop froze up. There were no more shaking leaves as she sat on the concrete floor: her back arched with her hazel eyes looking forward to a large glass bowl placed perfectly in front of her. Although she had not touched it yet, its cold started to push into her earthy skin, staining it with icy blue freckles. It felt as if the alabaster within was pushing its way towards her, and its edges were going to crack the glass. It was time.
 <br>
 <br>
-She watched her hand as it was carried towards the first piece of stone. Her finger lowered onto it, and a pulse of ice shot through her arm, her neck, her back. She could feel the last of the worms flee from her as she brought it towards her cheek. When it was caught in the underswell, her skin drew in the stone as the ocean pulling in a boat – a hateful acceptance of a thing that does not belong. Over and over did the current swallow and freeze, leaving her with a face of swollen marble. 
+She watched her hand as it was carried towards the first piece of stone. Her finger lowered onto it, and a pulse of ice shot through her arm, her neck, her back. She could feel the last of the worms flee from her as she brought it towards her cheek. When it was caught in the underswell, her skin drew in the stone as the ocean pulling in a boat - a hateful acceptance of a thing that does not belong. Over and over did the current swallow and freeze, leaving her with a face of swollen marble. 
 <br>
 <br>
-A small knife laid on the tombed floor next to her. Her hand tightened over its white hilt and brought the sharpened edge to her finger. The pain was quiet. Her white hand brought the bloodied tool in line with her face, and she took a breath – 
+A small knife laid on the tombed floor next to her. Her hand tightened over its white hilt and brought the sharpened edge to her finger. The pain was quiet. Her white hand brought the bloodied tool in line with her face, and she took a breath - 
 <br><br>
 Red. 
 <br><br>
