--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <li><a href="Juliet.html">JULIET</a></li>
                     <li><a href="Jarrod.html">JARROD</a></li>
                     <li><a href="Sean.html">SEAN</a></li>
-                    <li><a href="Rachelle.html">RACHELLE</a></li>
+                    <!--<li><a href="Rachelle.html">RACHELLE</a></li>-->
                     <li><a href="Dewald.html">DEWALD</a></li>
 
                 </ul>
@@ -101,7 +101,7 @@
             critical and never letting 
             myself finish any pieces. Hopefully doing a whole lot of it over the coming weeks will help me change that :)
         </p>
-        <a href="Rachelle.html" class="hero-btn">CHECK OUT MY WORK</a>
+        <!--<a href="Rachelle.html" class="hero-btn">CHECK OUT MY WORK</a>-->
     </section>
 
     <section class="dewald-words">
