--- a/Dewald.html
+++ b/Dewald.html
@@ -26,7 +26,7 @@
                     <li><a href="Juliet.html">JULIET</a></li>
                     <li><a href="Jarrod.html">JARROD</a></li>
                     <li><a href="Sean.html">SEAN</a></li>
-                    <li><a href="Rachelle.html">RACHELLE</a></li>
+                    <!--<li><a href="Rachelle.html">RACHELLE</a></li>-->
                     <li><a href="Dewald.html">DEWALD</a></li>
 
                 </ul>
@@ -51,9 +51,9 @@
             </div>
 
             <div class="photos-col">
-                <img src="art_dewald/Coming_Soon_Dewald.png">
+                <img src="art_dewald/Week B - Blitz Dagger.png">
                 <div class="layer">
-                    <h3>B...<br>11 Sept 2023</h3>
+                    <h3>Blitz Dagger<br>24 September 2023</h3>
                 </div>
             </div>
 
