Sean (E) and Dewald (C, B updated)

--- a/Dewald.html
+++ b/Dewald.html
@@ -58,12 +58,15 @@
             </div>
 
             <div class="photos-col">
-                <img src="art_dewald/Coming_Soon_Dewald.png">
+                <img src="art_dewald/Week C - Cat's Coin.png">
                 <div class="layer">
-                    <h3>C...<br>18 Sept 2023</h3>
+                    <h3>Coin of the Cat<br>1 October 2023</h3>
                 </div>
             </div>
 
+
+        </div>
+    </section>
 
         </div>
     </section>
