--- a/Sean.html
+++ b/Sean.html
@@ -44,6 +44,25 @@
         <!--COPY FROM HERE-->
         <div class="row">
             <div class="two_image">
+                <img src="art_sean/Evening.png" class="gallery-image" alt="">
+            </div>            
+        </div>
+        <h1>Title: Evening</h1>
+        <h1>Date: 4 October 2023</h1>
+        <!--COPY TO HERE-->
+        <!--COPY FROM HERE-->
+        <div class="row">
+            <div class="two_image">
+                <img src="art_sean/Dogged_1.jpg" class="gallery-image" alt="">
+            </div>            
+        </div>
+        <h1>Title: Dogged</h1>
+        <h1>Date: 27 September 2023</h1>
+        <!--COPY TO HERE-->
+
+        <!--COPY FROM HERE-->
+        <div class="row">
+            <div class="two_image">
                 <img src="art_sean/Chrysalis_page-0001.jpg" class="gallery-image" alt="">
             </div>            
         </div>
