Jarrod E, My D and E

--- a/Jarrod.html
+++ b/Jarrod.html
@@ -97,9 +97,10 @@
             </div>
 
             <div class="photos-col">
-                <img src="art_jarrod/Work in Progress.png">
-                <h2>Title: E...</h2>
-                <h2>Date: 2023</h2>
+                <img src="art_jarrod/Elk of Envy.png">
+                <h2>Title: Elk of Envy</h2>
+                <h2>Date: 8 October 2023</h2>
+                <p>Do yourself a favour and listen to the call of an elk's bugle - a beautiful and horrifying sound. The elk stands tall, his head upon a human body. He is proud of his work, but there is still a twinge of sadness in his eyes. Upon his crown of antlers, two human heads have been severed and pierced - the emotion of death still frozen upon their faces. The male presenting head seems to be in agony, eyes shut with one having been pierced through the back of his skull. The female presenting head is in a state of mania, potentially laughing or crying in pain, with the tip of an antler protruding from her forehead. The word "envy" is scrawled across the image, for the physical manifestation of their envy has killed them both. </p>
             </div>
 
             <div class="photos-col">
