--- a/Juliet.html
+++ b/Juliet.html
@@ -43,6 +43,24 @@
     <section class="word_btn_rep">
         <div class="row">
             <div class="word_btn_rep-col">
+                <h1>Drought</h1>
+                <p>8 October 2023</p>
+                <a href="art_juliet/drought.html" target="_blank" class="hero-btn">Read</a>
+            </div>
+            <div class="word_btn_rep-col">
+                <h1>Eden</h1>
+                <p>8 October 2023</p>
+                <a href="art_juliet/eden.html" target="_blank" class="hero-btn">Read</a>
+            </div>
+            <div class="word_btn_rep-col">
+                <h1>F...</h1>
+                <p>Coming Soon...</p>
+                
+            </div>
+
+        </div>
+        <div class="row">
+            <div class="word_btn_rep-col">
                 <h1>Alabaster</h1>
                 <p>8 September 2023</p>
                 <a href="art_juliet/alabaster.html" target="_blank" class="hero-btn">Read</a>
