--- a/index_original.html
+++ b/index_original.html
@@ -70,7 +70,8 @@
             My goal is to tell a story through descriptive peices of moments in a person's life. She will be 
             fantastical and beautiful, ugly and cruel, but hopefully once all is said and done - she will be whole. 
         </p>
-        <a href="Juliet.html" class="hero-btn">CHECK OUT MY WORK</a>
+       <!-- <a href="Juliet.html" class="hero-btn">CHECK OUT MY WORK</a> -->
+        <a href="testing.html" class="hero-btn">FOR TESTING</a>
     </section>
 
     <section class="jarrod-words">
